<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity2">

    <Button
        android:id="@+id/volver"
        android:layout_width="403dp"
        android:layout_height="98dp"
        android:layout_marginTop="412dp"
        android:text="@string/volver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/consulta_datos"
        android:layout_width="403dp"
        android:layout_height="98dp"
        android:layout_marginTop="268dp"
        android:text="@string/consultar_datos"
        app:layout_constraintBottom_toTopOf="@+id/volver"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/insertar_datos"
        android:layout_width="403dp"
        android:layout_height="98dp"
        android:layout_marginTop="132dp"
        android:text="@string/insertar_datos"
        app:layout_constraintBottom_toTopOf="@+id/consulta_datos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/crear_tabla"
        android:layout_width="403dp"
        android:layout_height="98dp"
        android:text="@string/CrearTabla"
        app:layout_constraintBottom_toTopOf="@+id/insertar_datos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>