<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity3">

    <Button
        android:id="@+id/crear_Servicio"
        android:layout_width="414dp"
        android:layout_height="72dp"
        android:layout_marginTop="126dp"
        android:layout_marginBottom="55dp"
        android:text="@string/crear_servicio"
        app:layout_constraintBottom_toTopOf="@+id/detener_servicio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/pausa"
        android:layout_width="414dp"
        android:layout_height="72dp"
        android:layout_marginTop="79dp"
        android:layout_marginBottom="60dp"
        android:text="@string/pausa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/volver_main" />

    <Button
        android:id="@+id/detener_servicio"
        android:layout_width="414dp"
        android:layout_height="72dp"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="76dp"
        android:text="@string/detener_servicio"
        app:layout_constraintBottom_toTopOf="@+id/volver_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crear_Servicio" />

    <Button
        android:id="@+id/volver_main"
        android:layout_width="414dp"
        android:layout_height="72dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="230dp"
        android:text="@string/volver_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detener_servicio" />

</androidx.constraintlayout.widget.ConstraintLayout>